# DigitalRainWallpaper

./: Cargo.toml  README.md
documentation/journals/: 2024_03_30.md
documentation/pages/: Installation.md
references/: metadata.json  new.matrix.html  old.matrix.html
src/: main.rs
src/canvas/: canvas.rs  layer.rs  mod.rs
src/common/: charset.rs  charset_macro.rs  color.rs  mod.rs
src/core/canvas/: canvas.rs  mod.rs
src/core/drop/: drop.rs  mod.rs  tail.rs
src/drop/: drop.rs  mod.rs  tail.rs
src/parsers/: argparser.rs  canvas.rs  drop.rs  mod.rs
src/traits/: mod.rs
src/traits/canvas/: canvas.rs  mod.rs  parser.rs
src/traits/drop/: drop.rs  mod.rs  parser.rs  tail.rs
src/utils/: charset.rs  charset_macro.rs  color.rs  coordinates.rs  mod.rs  random.rs
ui/: main.qml
