[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Renderer
derive-getters = "0.3.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.10.4"
structopt = "0.3.25"
strum = "0.26.2"
strum_macros = "0.26.2"
# Qt
qmetaobject = "0.2"
cstr = "0.2"
